...
            app:layout_constraintStart_toStartOf="@+id/backgroundBtn"
            app:layout_constraintEnd_toEndOf="@+id/backgroundBtn"
            app:layout_constraintTop_toTopOf="@+id/backgroundBtn"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundBtn" />

        <View
            android:id="@+id/widget1Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ubi4_ripple_corners"
            android:clickable="true"
            android:focusable="true"
            android:clipToOutline="true"
...
